--- a/index.html
+++ b/index.html
@@ -4,41 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mike Luisi | Clases de Piano y Música en Vivo - Buenos Aires</title>
-  <meta name="description" content="Clases de piano personalizadas y shows musicales en Buenos Aires y online. Contratá a Mike Luisi, músico profesional con más de 20 años de experiencia." />
-  <meta name="keywords" content="Clases de piano, profesor de piano, música en vivo, shows musicales, jazz, tango, tecladista, Buenos Aires, Mike Luisi" />
+  <meta name="description" content="Clases de piano personalizadas, biografía, estilos y shows musicales en Buenos Aires y online. Contratá a Mike Luisi, músico profesional con más de 20 años de experiencia." />
+  <meta name="keywords" content="Clases de piano, profesor de piano, música en vivo, biografía de músico, shows musicales, jazz, tango, tecladista, Buenos Aires, Mike Luisi" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://mikeluisi.github.io" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="Mike Luisi | Clases de Piano y Música en Vivo - Buenos Aires" />
   <meta property="og:description" content="Profesor de piano y músico profesional. Clases presenciales y online, shows para eventos, jazz, tango y más." />
-  <meta property="og:image" content="https://www.mikeluisi.com.ar/img/mike.jpg" />
+  <meta property="og:image" content="img/Mike2.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://mikeluisi.github.io" />
-
-  <!-- Structured Data -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name": "Mike Luisi",
-    "jobTitle": "Profesor de Piano y Músico Profesional",
-    "url": "https://mikeluisi.github.io",
-    "image": "https://www.mikeluisi.com.ar/img/mike.jpg",
-    "sameAs": [
-      "https://instagram.com/mike_luisi",
-      "https://www.youtube.com/@mikeluisipiano",
-      "https://www.linkedin.com/in/mikeluisi",
-      "https://open.spotify.com/artist/3a5aRD3XpnEEU7kXoK9iNb"
-    ],
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Buenos Aires",
-      "addressCountry": "AR"
-    },
-    "knowsAbout": ["Piano", "Jazz", "Tango", "Rock", "Shows en Vivo", "Docencia Musical"]
-  }
-  </script>
 
   <!-- Styles -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -71,6 +47,14 @@
       color: #ccc;
       margin-bottom: 2rem;
     }
+    section.bio {
+      padding: 1rem 2rem;
+      max-width: 720px;
+      margin: auto;
+      color: #ddd;
+      font-size: 1rem;
+      line-height: 1.6;
+    }
     .link {
       display: block;
       margin: 0.5rem auto;
@@ -82,10 +66,12 @@
       color: white;
       font-weight: bold;
       text-decoration: none;
-      transition: background 0.3s;
+      transition: background 0.3s, box-shadow 0.3s;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.3);
     }
     .link:hover {
       background: #e64a19;
+      box-shadow: 0 6px 10px rgba(0,0,0,0.5);
     }
     footer {
       font-size: 0.8rem;
@@ -96,22 +82,26 @@
 </head>
 <body>
   <header>
-    <img src="https://www.mikeluisi.com.ar/img/mike.jpg" alt="Mike Luisi tocando el piano" class="profile" />
+    <img src="img/Mike2.jpg" alt="Mike Luisi tocando el piano en vivo" class="profile" />
     <h1>Mike Luisi</h1>
     <h2>Clases de Piano | Shows en Vivo | Grabaciones</h2>
   </header>
 
+  <section class="bio">
+    <p>Con más de 20 años de experiencia en el mundo de la música, Mike Luisi ofrece clases de piano y teclado personalizadas, adaptadas a todos los niveles y edades. Su enfoque combina técnica, interpretación y creatividad, abarcando estilos como jazz, tango, rock y música popular. Además, se presenta en vivo en eventos, festivales y espacios culturales, tanto en Buenos Aires como en el exterior.</p>
+  </section>
+
   <main>
-    <a class="link" href="https://www.clasespiano.com.ar" target="_blank">🎹 Clases de Piano y Teclados</a>
-    <a class="link" href="https://api.whatsapp.com/send?phone=5491140395243" target="_blank">📱 WhatsApp</a>
-    <a class="link" href="https://instagram.com/mike_luisi" target="_blank">📸 Instagram</a>
-    <a class="link" href="https://instagram.com/mkq_jazz" target="_blank">🎷 MKQ_JAZZ</a>
-    <a class="link" href="https://facebook.com/mikeluisi" target="_blank">👍 Facebook</a>
-    <a class="link" href="https://youtube.com/@mikeluisipiano" target="_blank">▶️ YouTube</a>
-    <a class="link" href="https://open.spotify.com/artist/3a5aRD3XpnEEU7kXoK9iNb" target="_blank">🎧 Spotify</a>
-    <a class="link" href="https://soundcloud.com/mikeluisi" target="_blank">🔊 SoundCloud</a>
-    <a class="link" href="https://linkedin.com/in/mikeluisi" target="_blank">💼 LinkedIn</a>
-    <a class="link" href="mailto:mikeluisi@gmail.com">✉️ Contacto por Email</a>
+    <a class="link" href="https://www.clasespiano.com.ar" target="_blank" title="Ir a Clases de Piano">🎹 Clases de Piano y Teclados</a>
+    <a class="link" href="https://api.whatsapp.com/send?phone=5491140395243" target="_blank" title="Enviar mensaje por WhatsApp">📱 WhatsApp</a>
+    <a class="link" href="https://instagram.com/mike_luisi" target="_blank" title="Instagram personal">📸 Instagram</a>
+    <a class="link" href="https://instagram.com/mkq_jazz" target="_blank" title="Instagram de MKQ Jazz">🎷 MKQ_JAZZ</a>
+    <a class="link" href="https://facebook.com/mikeluisi" target="_blank" title="Facebook">👍 Facebook</a>
+    <a class="link" href="https://youtube.com/@mikeluisipiano" target="_blank" title="Canal de YouTube">▶️ YouTube</a>
+    <a class="link" href="https://open.spotify.com/artist/3a5aRD3XpnEEU7kXoK9iNb" target="_blank" title="Escuchar en Spotify">🎧 Spotify</a>
+    <a class="link" href="https://soundcloud.com/mikeluisi" target="_blank" title="Escuchar en SoundCloud">🔊 SoundCloud</a>
+    <a class="link" href="https://linkedin.com/in/mikeluisi" target="_blank" title="Perfil en LinkedIn">💼 LinkedIn</a>
+    <a class="link" href="mailto:mikeluisi@gmail.com" title="Enviar un email">✉️ Contacto por Email</a>
   </main>
 
   <footer>
