--- a/index.html
+++ b/index.html
@@ -2,24 +2,22 @@
 
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mike Luisi | Clases de Piano y Música en Vivo - Buenos Aires</title>
-  <meta name="description" content="Clases de piano personalizadas, biografía, estilos y shows musicales en Buenos Aires y online. Contratá a Mike Luisi, músico profesional con más de 20 años de experiencia." />
-  <meta name="keywords" content="Clases de piano, profesor de piano, música en vivo, biografía de músico, shows musicales, jazz, tango, tecladista, Buenos Aires, Mike Luisi" />
-  <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://mikeluisi.github.io" />
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Mike Luisi | Clases de Piano y Música en Vivo - Buenos Aires" />
-  <meta property="og:description" content="Profesor de piano y músico profesional. Clases presenciales y online, shows para eventos, jazz, tango y más." />
-  <meta property="og:image" content="img/Mike2.jpg" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://mikeluisi.github.io" />
-
-  <!-- Styles -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Mike Luisi | Clases de Piano y Música en Vivo - Buenos Aires</title>
+<meta content="Clases de piano personalizadas, biografía, estilos y shows musicales en Buenos Aires y online. Contratá a Mike Luisi, músico profesional con más de 20 años de experiencia." name="description"/>
+<meta content="Clases de piano, profesor de piano, música en vivo, biografía de músico, shows musicales, jazz, tango, tecladista, Buenos Aires, Mike Luisi" name="keywords"/>
+<meta content="index, follow" name="robots"/>
+<link href="https://mikeluisi.github.io" rel="canonical"/>
+<!-- Open Graph -->
+<meta content="Mike Luisi | Clases de Piano y Música en Vivo - Buenos Aires" property="og:title"/>
+<meta content="Profesor de piano y músico profesional. Clases presenciales y online, shows para eventos, jazz, tango y más." property="og:description"/>
+<meta content="img/Mike2.jpg" property="og:image"/>
+<meta content="website" property="og:type"/>
+<meta content="https://mikeluisi.github.io" property="og:url"/>
+<!-- Styles -->
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;display=swap" rel="stylesheet"/>
+<style>
     body {
       font-family: 'Montserrat', sans-serif;
       background: linear-gradient(135deg, #111, #222);
@@ -79,34 +77,85 @@
       color: #999;
       padding: 2rem 1rem;
     }
-  </style>
+  
+.testimonios {
+  padding: 2rem 1rem;
+  background: #1a1a1a;
+  color: #eee;
+  max-width: 800px;
+  margin: auto;
+}
+
+.testimonios h2 {
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+  color: #ff5722;
+}
+
+.testimonial {
+  margin-bottom: 1.5rem;
+  padding: 1rem 1.2rem;
+  border-left: 4px solid #ff5722;
+  background: #222;
+  text-align: left;
+  font-style: italic;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.4);
+}
+
+.testimonial span {
+  display: block;
+  margin-top: 0.5rem;
+  font-style: normal;
+  font-weight: bold;
+  color: #ccc;
+}
+
+</style>
+<script>
+  function toggleTestimonials() {
+    var section = document.getElementById("testimonios");
+    if (section.style.display === "block") {
+      section.style.display = "none";
+    } else {
+      section.style.display = "block";
+      section.scrollIntoView({ behavior: "smooth" });
+    }
+  }
+</script>
+<style>
+  #testimonios {
+    display: none;
+    transition: all 0.3s ease;
+  }
+</style>
 </head>
 <body>
-  <header>
-    <img src="img/Mike2.jpg" alt="Mike Luisi tocando el piano en vivo" class="profile" />
-    <h1>Mike Luisi</h1>
-    <h2>Clases de Piano | Shows en Vivo | Grabaciones</h2>
-  </header>
-
-  <section class="bio">
-    <p>Con más de 20 años de experiencia en el mundo de la música, Mike Luisi ofrece clases de piano y teclado personalizadas, adaptadas a todos los niveles y edades. Su enfoque combina técnica, interpretación y creatividad, abarcando estilos como jazz, tango, rock y música popular. Además, se presenta en vivo en eventos, festivales y espacios culturales, tanto en Buenos Aires como en el exterior.</p>
-  </section>
-
-  <main>
-    <a class="link" href="https://www.clasespiano.com.ar" target="_blank" title="Ir a Clases de Piano">🎹 Clases de Piano y Teclados</a>
-    <a class="link" href="https://api.whatsapp.com/send?phone=5491140395243" target="_blank" title="Enviar mensaje por WhatsApp">📱 WhatsApp</a>
-    <a class="link" href="https://instagram.com/mike_luisi" target="_blank" title="Instagram personal">📸 Instagram</a>
-    <a class="link" href="https://instagram.com/mkq_jazz" target="_blank" title="Instagram de MKQ Jazz">🎷 MKQ_JAZZ</a>
-    <a class="link" href="https://facebook.com/mikeluisi" target="_blank" title="Facebook">👍 Facebook</a>
-    <a class="link" href="https://youtube.com/@mikeluisipiano" target="_blank" title="Canal de YouTube">▶️ YouTube</a>
-    <a class="link" href="https://open.spotify.com/artist/3a5aRD3XpnEEU7kXoK9iNb" target="_blank" title="Escuchar en Spotify">🎧 Spotify</a>
-    <a class="link" href="https://soundcloud.com/mikeluisi" target="_blank" title="Escuchar en SoundCloud">🔊 SoundCloud</a>
-    <a class="link" href="https://linkedin.com/in/mikeluisi" target="_blank" title="Perfil en LinkedIn">💼 LinkedIn</a>
-    <a class="link" href="mailto:mikeluisi@gmail.com" title="Enviar un email">✉️ Contacto por Email</a>
-  </main>
-
-  <footer>
+<header>
+<img alt="Foto de Mike Luisi tocando el piano" src="Mike2.jpg" style="width: 25%; height: auto; display: block; margin: 2rem auto; border-radius: 10px;"/>
+<h1>Mike Luisi</h1>
+<h2>Clases de Piano | Shows en Vivo | Grabaciones</h2>
+</header>
+<section class="bio">
+<p>Con más de 20 años de experiencia en el mundo de la música, Mike Luisi ofrece clases de piano y teclado personalizadas, adaptadas a todos los niveles y edades. Su enfoque combina técnica, interpretación y creatividad, abarcando estilos como jazz, tango, rock y música popular. Además, se presenta en vivo en eventos, festivales y espacios culturales, tanto en Buenos Aires como en el exterior.</p>
+</section>
+<main>
+<a class="link" href="https://mikeluisi.github.io/mikeluisi/" target="_blank" title="Ir a Clases de Piano">🎹 Clases de Piano y Teclados</a>
+<a class="link" href="https://api.whatsapp.com/send?phone=5491140395243" target="_blank" title="Enviar mensaje por WhatsApp">📱 WhatsApp</a>
+<a class="link" href="https://instagram.com/mike_luisi" target="_blank" title="Instagram personal">📸 Instagram</a>
+<a class="link" href="https://instagram.com/mkq_jazz" target="_blank" title="Instagram de MKQ Jazz">🎷 MKQ_JAZZ</a>
+<a class="link" href="https://facebook.com/mikeluisi" target="_blank" title="Facebook">👍 Facebook</a>
+<a class="link" href="https://youtube.com/@mikeluisipiano" target="_blank" title="Canal de YouTube">▶️ YouTube</a>
+<a class="link" href="https://open.spotify.com/intl-es/artist/7ibgmUvcG1pTF3pWE9LgU8?si=rtNqdXbzQNWEEWpK0pZzmQ" target="_blank" title="Escuchar en Spotify">🎧 Spotify</a>
+<a class="link" href="https://soundcloud.com/mikeluisi" target="_blank" title="Escuchar en SoundCloud">🔊 SoundCloud</a>
+<a class="link" href="mailto:mikeluisi@gmail.com" target="_blank" title="Enviar un email">✉️ Contacto por Email</a>
+<a class="link" href="javascript:void(0);" onclick="toggleTestimonials()" title="Leer opiniones de alumnos">🗣️ Leer Testimonios de Alumnos</a>
+</main>
+<footer>
     © 2025 Mike Luisi | Buenos Aires, Argentina
   </footer>
+<section class="testimonios" id="testimonios">
+<h2>Testimonios</h2>
+<div class="testimonial"><p>""Excelente profe !! Tuve la oportunidad de compartir en su espacio siendo alumno hace algunos años y recuerdo con gran...""</p><span>— lucas salazar</span></div><div class="testimonial"><p>""Excelente profe, me ayudó a rendir mi examen de piano armónico del conservatorio Ginastera. Toda la paciencia y el compromiso. Bocho de la armonía . Super recomiendo!!!""</p><span>— Micaela Antonella De La Cruz</span></div><div class="testimonial"><p>""Un capo!""</p><span>— Leandro Magonza</span></div><div class="testimonial"><p>"María Eugenia Ramos"</p><span>— "Muy buen docente"</span></div><div class="testimonial"><p>""Mi profe personal de hace muchos años, Excelente persona, va por la corriente...""</p><span>— Julius Baz</span></div><div class="testimonial"><p>""Un profe muy didáctico y con muchos recursos. Pude aprender a tocar estilos muy diferentes, jazz, pop, rock, clásico, folklore, tango, etc. También pude grabar pistas o temas. Son un placer las clases con Mike!""</p><span>— Pablo Ahlf</span></div><div class="testimonial"><p>"Marina Agostinelli"</p><span>— "Wilson Gimenez"</span></div><div class="testimonial"><p>"Excelente Músico!!! Recomiendoooo!!!"</p><span>— "Santiago moreno"</span></div><div class="testimonial"><p>"Las mejores clases que uno puede tener la verdad 10 de 10, y sobre todo gran persona."</p><span>— "juan scarafia"</span></div><div class="testimonial"><p>"Excelente profe... Y mejor persona aún!!!!. Excelentes sus clases, super didáctico y siempre dispuesto a brindar respuestas y compartir material!."</p><span>— "Sebastián Clementín"</span></div><div class="testimonial"><p>""Adrian D ́Angelo""</p><span>— Conozco a Mike hace varios años. Tomé clases en varias oportunidades para aprender armonía, piano jazz, piano blues,...</span></div><div class="testimonial"><p>"Un fenómeno el maestro, date una oportunidad de conocerlo, la tiene muy clara, es muy buena onda, hace fácil lo difícil,..."</p><span>— "Maria Andre Nikcevich"</span></div><div class="testimonial"><p>"Excelente profesor , hace parecer fácil lo difícil Trasmite su pasión por la música en cada..."</p><span>— "Mix Dance"</span></div><div class="testimonial"><p>"Excelencia y calidad 🙌🏾 y buena gente 🫶🏽"</p><span>— "VIVI CAMPOS"</span></div><div class="testimonial"><p>"BluesJazzeando recomienda los Grandes Maestros que con su Talento hacen vibrar las almas y los corazones de TODOS, en especial inspiran a las nuevas generaciones!"</p><span>— "Marcos Solari"</span></div><div class="testimonial"><p>"Excepcional docente y ser humano. Un verdadero guía, tanto en lo musical como en la vida. No hay palabras que alcancen..."</p><span>— "martin marcos"</span></div><div class="testimonial"><p>"Un crack Mike!! Toda la onda y buena predisposición para enseñar. Sabe muchísimo y lo transmite con claridad en clases dinámicas y entretenidas....Me sacó bueno a mi que era durísimo 😂"</p><span>— "Adriana Capisciolto"</span></div><div class="testimonial"><p>"Gran músico, maestro y persona!!!!"</p><span>— "Pipi Zamolo"</span></div><div class="testimonial"><p>"Es un gran profesor y músico mucha paciencia y alegría para enseñar muy recomendable."</p><span>— "Romina Marchisio Capote"</span></div><div class="testimonial"><p>"Un genio la verdad! Es todo lo que está bien! Sin dudas super recomendable!!"</p><span>— "Juan Kwater"</span></div><div class="testimonial"><p>"Excelente musico y docente....... muy recomendables sus clases tanto virtual como presencial!!!"</p><span>— "Gustavo Freiberg"</span></div><div class="testimonial"><p>"Mike destaca por su calidad, seriedad y profesionalismo como músico, con extensa experiencia en la docencia y ductilidad para tocar cualquier estilo. Super-recomendable!!!"</p><span>— "Patricia Valli"</span></div><div class="testimonial"><p>"Un gran músico! Un gran maestro!!"</p><span>— "Sushi kire"</span></div><div class="testimonial"><p>"Las clases con Mike son altamente recomendables, su paciencia y dedicacion han sido clave para que mi aprendizaje de cero en el teclado y la teoria musical, hayan sido una experiencia realmente increible"</p><span>— "Joaco Garcia"</span></div><div class="testimonial"><p>"Gran profesor, clases dinámicas y divertidas, aprendes un montón desde lo teórico hasta de temas y canciones que sean de..."</p><span>— "lucio solari"</span></div><div class="testimonial"><p>"Gran profesor, me entendio a la perfeccion y lo que buscaba aprender!"</p><span>— "gonzalo rujelman"</span></div><div class="testimonial"><p>"Capo mike! mucha paciencia y una enorme capacidad de enseñar arreglos y armonía. gran profesor! lo recomiendo."</p><span>— "Pablo abad"</span></div><div class="testimonial"><p>"Sos un genio Mike. Gracias por todo."</p><span>— "Mariano Nabais"</span></div><div class="testimonial"><p>"Si hay gente grossa ese es Miguel!! Un crack total!!"</p><span>— "catalina saravia"</span></div><div class="testimonial"><p>"Excelente. Un genio Mike!"</p><span>— "José M. Motta"</span></div><div class="testimonial"><p>"Excelente profesor. Altamente recomendable para todos los niveles. Empecé de 0 y en 4 meses ya estaba tocando obras simples de jazz y blues."</p><span>— "Claudio Scolamiero"</span></div><div class="testimonial"><p>"Excelente todo! De primera"</p><span>— "Francisco Javier Nabais"</span></div><div class="testimonial"><p>"Gran profesor, Mike. Es un pianista de la hostia. Y además de todo lo excelente de lo profesional es una gran persona. Lo recomiendo sin dudas. Un maestro de amplio espectro."</p><span>— "Federico Hernan Gonzalez"</span></div><div class="testimonial"><p>"Un grande. Explica muy bien. Toda la paciencia. A pesar d mis dedos enyesados puedo hacer canciones enteras ahora...."</p><span>— "Renzo Mazzuca"</span></div><div class="testimonial"><p>"Excelente profesor y mejor persona. Tomé clases con Mike más de 4 años. 100% recomendado"</p><span>— "Osvaldo Pace"</span></div><div class="testimonial"><p>"Hace muchos años tuve la suerte de conocer a un enorme profesor y por sobre todas las cosas una gran persona, mike. A la distancia lo considero también, un amigo."</p><span>— "Facundo Suárez"</span></div><div class="testimonial"><p>"Excelentes clases y lo más importante es que este profe te transmite la pasión por la música. No sólo vas a aprender piano, si no que es una formación integral, vas a aprender cómo hacer música…"</p><span>— "Luis Farias"</span></div><div class="testimonial"><p>"En este hermoso camino de la música tuve la fortuna de cruzarme con el señor Mike Luisi...."</p><span>— "Natalia Soldano"</span></div><div class="testimonial"><p>"Sobre todo, mucha paciencia!! Lo recomiendo sinceramente"</p><span>— "Leonardo Mendezhgn"</span></div><div class="testimonial"><p>"Hola, es un excelente Docente. Se aprende desde el juego y la disciplina. Y si banda MKQ Jazz la rompe. Saludos."</p><span>— "matias Winter"</span></div><div class="testimonial"><p>""PANCoTV Silvina Carnevale (PANCoLife)""</p><span>— Gran maestro! Por sobre todo excelente persona! Si querés aprender jazz es con Mike</span></div><div class="testimonial"><p>"Mike es un excelente profesor y, sobre todo, un gran ser humano. Las clases son muy amenas, didácticas y divertidas;..."</p><span>— "Fabian Toledo"</span></div><div class="testimonial"><p>"Mike, es un profesor de piano excelente, con una gran paciencia y pedagogía. Siempre lo recomiendo a quienes me consultan por un maestro"</p><span>— "Jose Antonio Fernandez"</span></div><div class="testimonial"><p>"Excelente docente. He aprendido mucho con Mike, lo recomiendo completamente! Gracias Mike por tanto"</p><span>— "diego weber"</span></div><div class="testimonial"><p>"Gran profe!!!!!!"</p><span>— "Diego Carman"</span></div><div class="testimonial"><p>"El mejor profe de piano. Lejos…."</p><span>— "Leo Ran"</span></div><div class="testimonial"><p>"Un capo. Sabe un montón. Más que recomendable!"</p><span>— "Cristian Baraldo"</span></div><div class="testimonial"><p>"Soy Alumno de Mike y lo conozco desde la infancia! Excelente persona, y le encanta enseñar música, tiene buena paciencia!!!"</p><span>— "krishna cicchetti"</span></div><div class="testimonial"><p>"EXCELENTE PROFESOR!!! Tuve dos años de clase, buena persona y gran profesional."</p><span>— "Lorena Scotto"</span></div><div class="testimonial"><p>"Músico increíble! Y a parte una persona exepcional!!!!"</p><span>— "Alejandra Palma"</span></div><div class="testimonial"><p>"Excelente profesor: claro, didáctico y muy comprometido. Además su calidez humana hace que aprender sea una experiencia muy amena. Totalmente recomendable!"</p><span>— "Sebastián Balan"</span></div><div class="testimonial"><p>"Mike es un gran docente de piano. Generoso compartiendo todo su conocimiento. Da lo que tiene y, si puede, un poco más."</p><span>— "legaspi Eric"</span></div><div class="testimonial"><p>"un Maestro Mike!. Como profesor, como pianista y ser Humano."</p><span>— "Noel Perez"</span></div><div class="testimonial"><p>"Mike es un gran profe, sin dudas el mejor que tuve hasta ahora. Muy cálido y te orienta sin vueltas al objetivo que quieras alcanzar. Muy buenas las clases siempre. Recomiendo 100%"</p><span>— "Damian de Alzaa"</span></div><div class="testimonial"><p>"Un crack musicalmente , la mejor onda y súper gran persona. Lo recomiendo .Tome clases por zoom y me encantó."</p><span>— "Francisco Catalusci"</span></div><div class="testimonial"><p>"Excelente profesor. Mucha dedicación y adecuación a cada alumno. Sabe muchísimo, recomendado 100%"</p><span>— "estanislao prado"</span></div><div class="testimonial"><p>"excelente profe! y mejor persona aun!! lo recomiendo ampliamente."</p><span>— "Carolina Cavadore"</span></div><div class="testimonial"><p>"Gran Maestro, siempre encuentra la mejor forma de que entiendas y incorpores! Super recomendable."</p><span>— "Lautaro Homzi"</span></div><div class="testimonial"><p>"Tuve clases con él por un año, sinceramente, fue el mejor profesor que tuve, siempre se abrio a cualquier cosa que le proponia. Y para aprender las bases de la teoria/piano, tambien, la mejore enseñanza."</p><span>— "Martin Luisi"</span></div><div class="testimonial"><p>"Excelente profe! y tremendas las clases, por lejos de lo mejor en lo pedagógico y humano."</p><span>— "Mariano Kahayan"</span></div><div class="testimonial"><p>"Excelente docente"</p><span>— "Carolina Meijon"</span></div><div class="testimonial"><p>""BluesJazzeando (by VIVI CAMPOS)""</p><span>— Excelente persona y un gran profesor. Gracias por compartir tu talento, vocación y profesionalidad aquí en España. Super recomendable!!!</span></div><div class="testimonial"><p>"EXCELENTE Page! Felicitaciones por el talento y profesionalismo SIEMPRE!"</p><span>— "Alfredo Lopez"</span></div><div class="testimonial"><p>""Excelente profe, me ayudó a rendir mi examen de piano armónico del conservatorio Ginastera. Toda la paciencia y el compromiso. ¡Super recomiendo!""</p><span>— Micaela De La Cruz</span></div><div class="testimonial"><p>""Un crack Mike!! Toda la onda y buena predisposición para enseñar. Me sacó bueno a mí que era durísimo 😂""</p><span>— Martín Marcos</span></div><div class="testimonial"><p>""Las clases son muy amenas, didácticas y divertidas; Mike es un gran ser humano además de excelente profesor.""</p><span>— PANCoLife (Silvina Carnevale)</span></div><div class="testimonial"><p>""Es un excelente docente. Se aprende desde el juego y la disciplina. Y su banda MKQ Jazz la rompe. ¡Saludos!""</p><span>— Leonardo Mendezhgn</span></div><div class="testimonial"><p>""Las clases con Mike me ayudaron a entender e incorporar teoría y armonía desde cero. Una experiencia increíble.""</p><span>— Sushi Kire</span></div><div class="testimonial"><p>""Un verdadero guía, tanto en lo musical como en la vida. Excepcional docente y ser humano.""</p><span>— Marcos Solari</span></div><div class="testimonial"><p>""El mejor profe de piano. Lejos…""</p><span>— Diego Carman</span></div></section>
 </body>
 </html>
